Update Game Of Thrones.theme.css

--- a/Game Of Thrones.theme.css
+++ b/Game Of Thrones.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Game of Thrones","description":"Game of Thrones!
+//META{"name":"Game of Thrones","description":"Game of Thrones!"
 /* "Game of Throne" by @DevilsLynAvenged */
 
 
