--- a/Bubbles_World.theme.css
+++ b/Bubbles_World.theme.css
@@ -27,6 +27,7 @@
     height: 75%;
     background-color: transparent !important;
     background-size: cover;
+    opacity: 0.7;
  }
 
 .guilds-wrapper .guilds .guild .guild-inner a {
