--- a/Winter.theme.css
+++ b/Winter.theme.css
@@ -1,6 +1,6 @@
 //META{"name":"Winter","description":"Enjoy the 'Cool' Theme","author":"DevilsTheAvenged","version":"1.0"}*//{}
 
-@import url(https://rawgit.com/DevilsLynAvenged/Other-Workspace/master/WinterWonder.theme.css);
+@import url(https://raw.githubusercontent.com/DevilsLynAvenged/Other-Workspace/master/WinterWonder.theme.css);
 @import url(https://gitcdn.xyz/repo/themoonisacheese/themer.js/master/themer.js.css);
 
 :root {
