--- a/Yumeko.theme.css
+++ b/Yumeko.theme.css
@@ -1,7 +1,7 @@
 //META{"name":"Yumeko","description":"Who wants to play some Poker because I know I want to","author":"DevilsTheAvenged","version":"1.0"}*//{}
 
 @import url(https://gitcdn.xyz/repo/themoonisacheese/themer.js/master/themer.js.css);
-@import url(https://rawgit.com/DevilsLynAvenged/Other-Workspace/master/Gamble.Theme.css);
+@import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/4d5d4d44/Gamble.Theme.css);
 /* Backgrounds */
 .app,
 .callout-backdrop {
