--- a/Avatar-No-More.theme.css
+++ b/Avatar-No-More.theme.css
@@ -128,3 +128,22 @@
     left: 12px !important;
     width: 130px;
 }
+.avatarDefault-3jtQoc, .avatarSpeaking-3teDH6 {
+    background-repeat: no-repeat;
+    background-size: 0px 0px;
+    height: 0px;
+    width: 0px;
+}
+.nameDefault-1I0lx8 {
+    color: rgba(255,255,255,0.7);
+}
+
+.nameDefault-1I0lx8, .nameHovered-28u_Fz, .nameSpeaking-3ROx9q {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 28px;
+    margin-left: -12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
