--- a/Avatar-No-More.theme.css
+++ b/Avatar-No-More.theme.css
@@ -147,3 +147,12 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+.headerStreaming-3F-wjT .avatarHint-2i5XWK {
+  position: absolute;
+  opacity: 0.3;
+  margin-top: 139.7px !important;
+  z-index: 9;
+  margin-left: -30.5px !important;
+  width: 70px;
+  height: 70px;
+}
