--- a/Chocola Theme.theme.css
+++ b/Chocola Theme.theme.css
@@ -1,3 +1,5 @@
+//META{"name":"Chocola_Theme","description":"Just an average Chocola Theme","author":"DevilsLTheAvenged","version":"1.0"}*//{}
+
 .avatarNormal-3luwna {
     border-color: #FFFFFF;
 }
