--- a/Avatar-No-More.theme.css
+++ b/Avatar-No-More.theme.css
@@ -39,9 +39,29 @@
 .container-iksrDt .status {
     width: 30px;
     height: 30px;
-    left: 96px;
+    left: 6pc;
     
 }
+.channelTextAreaEnabled-c05Zpy.channelTextArea-1HTP3C.margin-top-8 {
+    background: rgba(0,0,0,0.3) !important;
+    border-radius: 1px;
+    border: 1px solid rgba(255,255,255,0.4);
+    left: 3pc;
+}
+.message-group .edit-message .edit-container-inner {
+    margin-right: 80px;
+}
+.theme-dark .message-group .edit-message .edit-operation {
+    color: rgba(255, 255, 255, 0.5);
+}
+.message-group .edit-message .edit-operation {
+    font-size: .95rem;
+    text-align: right;
+}
+.message-group .edit-message .edit-operation>a {
+    color: white;
+}
+
 .private-channels .channel .avatar-small {
     width: 0px;
     height: 0px;
