--- a/RemTheme.theme.css
+++ b/RemTheme.theme.css
@@ -4,12 +4,12 @@
 @import url(https://gitcdn.xyz/repo/themoonisacheese/themer.js/master/themer.js.css);
 /* Backgrounds */
 .app {
-	background-image: url("https://pre00.deviantart.net/1bd2/th/pre/i/2016/270/e/0/minimalist_wallpaper___rem__re_zero__by_mrtapoz_kun-daj54o1.jpg");
+	background-image: url("https://wallpaperscraft.com/image/rem_re_zero_girl_anime_112238_2560x1024.jpg");
 	background-size: cover !important;
 	background-position: center !important;
 }
 .callout-backdrop {
-	background-image: url("https://pre00.deviantart.net/0d56/th/pre/i/2016/284/4/a/rem___re_zero_by_rosalyneres-dakh2gs.png");
+	background-image: url("https://wallpaperscraft.com/image/rem_re_zero_girl_anime_112238_2560x1024.jpg");
 	background-size: cover !important;
 	background-position: center !important;
 }
@@ -17,17 +17,17 @@
    opacity: 0.8 !important;
 }
 .bda-backdrop {
-	background: url("https://pre00.deviantart.net/1bd2/th/pre/i/2016/270/e/0/minimalist_wallpaper___rem__re_zero__by_mrtapoz_kun-daj54o1.jpg");
+	background: url("https://wallpaperscraft.com/image/rem_re_zero_girl_anime_112238_2560x1024.jpg");
 	background-size: cover!important;
 }
 
 #pubs-container:before {
-	background: url("https://pre00.deviantart.net/1bd2/th/pre/i/2016/270/e/0/minimalist_wallpaper___rem__re_zero__by_mrtapoz_kun-daj54o1.jpg")!important;
+	background: url("https://wallpaperscraft.com/image/rem_re_zero_girl_anime_112238_2560x1024.jpg")!important;
 	background-size: cover!important;
 }
-.theme-dark .chat{background: transparent;}
+.theme-dark .chat{background: rgba(0,0,0,0.2);}
 
-.layers, .layer { background: transparent !important; }
+.layers, .layer { background: rgba(0,0,0,0.2)!important; }
 
 
 
