--- a/RamTheme.theme.css
+++ b/RamTheme.theme.css
@@ -2,17 +2,21 @@
 @import url(https://gitcdn.xyz/repo/themoonisacheese/themer.js/master/themer.js.css);
 @import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/4b1efac5/Ram2.theme.css);
 .app,.callout-backdrop {
-	background-image: url("https://img00.deviantart.net/6892/i/2016/269/a/9/minimalist_wallpaper___ram__re_zero__by_mrtapoz_kun-daisdq0.jpg");
+	background-image: url("https://static.zerochan.net/Ram.%28Re%3AZero%29.full.2031007.jpg");
 	background-size: cover !important;
 	background-position: center !important;
 }
 .bda-backdrop {
-	background: url("https://img00.deviantart.net/6892/i/2016/269/a/9/minimalist_wallpaper___ram__re_zero__by_mrtapoz_kun-daisdq0.jpg");
+	background: url("https://static.zerochan.net/Ram.%28Re%3AZero%29.full.2031007.jpg");
 	background-size: cover!important;
 }
 
 #pubs-container:before {
-	background: url("https://img00.deviantart.net/6892/i/2016/269/a/9/minimalist_wallpaper___ram__re_zero__by_mrtapoz_kun-daisdq0.jpg")!important;
+	background: url("https://static.zerochan.net/Ram.%28Re%3AZero%29.full.2031007.jpg")!important;
 	background-size: cover!important;
 }
+.theme-dark .chat{background: rgba(0,0,0,0.2);}
+
+.layers, .layer { background: rgba(0,0,0,0.2)!important; }
+
 
