--- a/Yumeko.theme.css
+++ b/Yumeko.theme.css
@@ -5,18 +5,18 @@
 /* Backgrounds */
 .app,
 .callout-backdrop {
-	background-image: url("https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-538720.png");
+	background-image: url("https://images6.alphacoders.com/860/860275.png");
 	background-size: cover !important;
 	background-position: center !important;
 }
 
 .bda-backdrop {
-	background: url("https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-538720.png");
+	background: url("https://images6.alphacoders.com/860/860275.png");
 	background-size: cover!important;
 }
 
 #pubs-container:before {
-	background: url("https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-538720.png")!important;
+	background: url("https://images6.alphacoders.com/860/860275.png")!important;
 	background-size: cover!important;
 }
 
