--- a/RemTheme.theme.css
+++ b/RemTheme.theme.css
@@ -29,6 +29,9 @@
 
 .layers, .layer { background: rgba(0,0,0,0.2)!important; }
 
+.flexChild-1KGW5q { 
+background: transparent !important;
+}
 
 
 
