--- a/RamTheme.theme.css
+++ b/RamTheme.theme.css
@@ -18,5 +18,12 @@
 .theme-dark .chat{background: rgba(0,0,0,0.2);}
 
 .layers, .layer { background: rgba(0,0,0,0.2)!important; }
+.note textarea {
+color: white;
+}
+.flexChild-1KGW5q { 
+background: transparent !important;
+}
+
 
 
