--- a/RamTheme.theme.css
+++ b/RamTheme.theme.css
@@ -24,6 +24,11 @@ color: white;
 .flexChild-1KGW5q { 
 background: transparent !important;
 }
-
+.theme-dark .chat form .typing {
+    background-color: transparent !important;
+}
+.theme-dark .chat form {
+    background-color: transparent !important;
+ }
 
 
