--- a/RemTheme.theme.css
+++ b/RemTheme.theme.css
@@ -1,10 +1,10 @@
 //META{"name":"Rem_Theme","description":"Team Rem Theme","author":"DevilsTheAvenged","version":"1.0"}*//{}
 
-@import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/d24a1856/Rem2.theme.css);
+@import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/911985b9/SomeUnImportantStuff/Rem2.theme.css);
 @import url(https://gitcdn.xyz/repo/themoonisacheese/themer.js/master/themer.js.css);
 /* Backgrounds */
 .app {
-	background-image: url("https://wallpaperscraft.com/image/rem_re_zero_girl_anime_112238_2560x1024.jpg");
+	background-image: url("https://pre00.deviantart.net/1bd2/th/pre/i/2016/270/e/0/minimalist_wallpaper___rem__re_zero__by_mrtapoz_kun-daj54o1.jpg");
 	background-size: cover !important;
 	background-position: center !important;
 }
@@ -17,21 +17,27 @@
    opacity: 0.8 !important;
 }
 .bda-backdrop {
-	background: url("https://wallpaperscraft.com/image/rem_re_zero_girl_anime_112238_2560x1024.jpg");
+	background: url("https://pre00.deviantart.net/1bd2/th/pre/i/2016/270/e/0/minimalist_wallpaper___rem__re_zero__by_mrtapoz_kun-daj54o1.jpg");
 	background-size: cover!important;
 }
 
 #pubs-container:before {
-	background: url("https://wallpaperscraft.com/image/rem_re_zero_girl_anime_112238_2560x1024.jpg")!important;
+	background: url("https://pre00.deviantart.net/1bd2/th/pre/i/2016/270/e/0/minimalist_wallpaper___rem__re_zero__by_mrtapoz_kun-daj54o1.jpg")!important;
 	background-size: cover!important;
 }
 .theme-dark .chat{background: rgba(0,0,0,0.2);}
 
 .layers, .layer { background: rgba(0,0,0,0.2)!important; }
+ .container-2OU7Cz, .theme-dark .title-qAcLxz, .channels-3g2vYe, .theme-dark .chat form, .theme-dark .headerBar-cxbhPD {
+    background-color: transparent;
+}
 
 .flexChild-1KGW5q { 
 background: transparent !important;
 }
+
+
+
 
 
 
