--- a/Yumeko.theme.css
+++ b/Yumeko.theme.css
@@ -1,7 +1,6 @@
 //META{"name":"Yumeko","description":"Who wants to play some Poker because I know I want to","author":"DevilsTheAvenged","version":"1.1"}*//{}
-
 @import url(https://gitcdn.xyz/repo/themoonisacheese/themer.js/master/themer.js.css);
-@import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/cca1c3e4/Gamble.Theme.css);
+@import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/5b9f812a/SomeUnImportantStuff/Gamble.theme.css);
 /* Backgrounds */
 .app,
 .callout-backdrop {
@@ -19,4 +18,3 @@
 	background: url("https://images6.alphacoders.com/860/860275.png")!important;
 	background-size: cover!important;
 }
-
