--- a/DoritosTheme.theme.css
+++ b/DoritosTheme.theme.css
@@ -22,3 +22,7 @@
 .layer {
 	background: transparent !important;
 }
+.mention-RlZ5F3 {
+    background-color: rgba(201, 3, 6,0.8) !important;
+    color: #FD5E00;
+}
