--- a/MountainDew.theme.css
+++ b/MountainDew.theme.css
@@ -22,3 +22,7 @@
 .theme-dark .chat{background: transparent;}
 
 .layers, .layer { background: transparent !important; }
+.mention-RlZ5F3 {
+    background-color: rgba(14,84,3,0.8) !important;
+    color: #e7e7e7;
+}
