--- a/RemTheme.theme.css
+++ b/RemTheme.theme.css
@@ -36,6 +36,10 @@
 background: transparent !important;
 }
 
+.horizontal-2BEEBe>.flex-lFgbSz .chat {
+    background: rgba(0,0,0,0.2) !important;
+}
+
 
 
 
