--- a/RamTheme.theme.css
+++ b/RamTheme.theme.css
@@ -31,4 +31,7 @@ background: transparent !important;
     background-color: transparent !important;
  }
 
+.horizontal-2BEEBe>.flex-lFgbSz .chat {
+    background: rgba(0,0,0,0.2) !important;
+}
 
