--- a/MountainDew.theme.css
+++ b/MountainDew.theme.css
@@ -22,7 +22,7 @@
 .theme-dark .chat{background: transparent;}
 
 .layers, .layer { background: transparent !important; }
-.mention-RlZ5F3 {
-    background-color: rgba(14,84,3,0.8) !important;
-    color: #e7e7e7;
+
+.theme-dark .contentTitle-sL6DrN, .marginLeft8-34JoM2, .theme-dark .description-YnaVYa, .theme-dark .descriptionUsername-1quCGz, .theme-dark .descriptionDiscriminator-3KCIMj, .marginLeft4-3RAvyQ, .theme-dark .hljs-comment, .theme-dark .hljs-quote {
+    color: white;
 }
