--- a/ShadeofGreenTheme.theme.css
+++ b/ShadeofGreenTheme.theme.css
@@ -2,3 +2,12 @@
 
 @import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/6132839f/SomeUnImportantStuff/ShadeofGreenBackup.theme.css);
 
+
+.bda-dark .emoji-picker .scroller::-webkit-scrollbar, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece {
+    background-color: transparent !important;
+    border-color: transparent !important;
+}
+.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-thumb, .bda-dark #pubs-container .scroller::-webkit-scrollbar-thumb {
+    border-color: transparent !important;
+    background-color: green !important;
+}
