--- a/WindowsTheme.theme.css
+++ b/WindowsTheme.theme.css
@@ -1,29 +1,11 @@
 //META{"name":"WindowsTheme","description":"FreshWindowsTheme","author":"DevilsTheAvenged","version":"1.0"}*//{}
-@import url(https://gitcdn.xyz/repo/themoonisacheese/themer.js/master/themer.js.css);
-@import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/47fd2495/SomeUnImportantStuff/subWindows.theme.css);
+@import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/dc08d026/SomeUnImportantStuff/subWindows.theme.css);
 /* Backgrounds */
-
 .app,
-.callout-backdrop {
+.callout-backdrop,#pubs-container:before,.bda-backdrop {
   background-image: url("https://www.walldevil.com/wallpapers/a45/3245-windows.jpg");
   background-size: cover !important;
   background-position: center !important;
-}
-.bda-backdrop {
-  background: url("https://www.walldevil.com/wallpapers/a45/3245-windows.jpg");
-  background-size: cover!important;
-}
-
-#pubs-container:before {
-  background: url("https://www.walldevil.com/wallpapers/a45/3245-windows.jpg")!important;
-  background-size: cover!important;
-}
-.theme-dark .chat {
-  background: transparent;
-}
-.layers,
-.layer {
-  background: transparent !important;
 }
 
 
