--- a/RamTheme.theme.css
+++ b/RamTheme.theme.css
@@ -1,37 +1,7 @@
 //META{"name":"Ram_Theme","description":"Team Ram Theme","author":"DevilsTheAvenged","version":"1.0"}*//{}
-@import url(https://gitcdn.xyz/repo/themoonisacheese/themer.js/master/themer.js.css);
-@import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/9cb2d0f8/SomeUnImportantStuff/Ram2.theme.css);
-.app,.callout-backdrop {
-	background-image: url("https://static.zerochan.net/Ram.%28Re%3AZero%29.full.2031007.jpg");
+@import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/4c0cee44/SomeUnImportantStuff/Ram2.theme.css);
+.app,.callout-backdrop,#pubs-container:before {
+	background-image: url("https://img00.deviantart.net/6892/i/2016/269/a/9/minimalist_wallpaper___ram__re_zero__by_mrtapoz_kun-daisdq0.jpg");
 	background-size: cover !important;
 	background-position: center !important;
 }
-.bda-backdrop {
-	background: url("https://static.zerochan.net/Ram.%28Re%3AZero%29.full.2031007.jpg");
-	background-size: cover!important;
-}
-
-#pubs-container:before {
-	background: url("https://static.zerochan.net/Ram.%28Re%3AZero%29.full.2031007.jpg")!important;
-	background-size: cover!important;
-}
-.theme-dark .chat{background: rgba(0,0,0,0.2);}
-
-.layers, .layer { background: rgba(0,0,0,0.2)!important; }
-.note textarea {
-color: white;
-}
-.flexChild-1KGW5q { 
-background: transparent !important;
-}
-.theme-dark .chat form .typing {
-    background-color: transparent !important;
-}
-.theme-dark .chat form {
-    background-color: transparent !important;
- }
-
-.horizontal-2BEEBe>.flex-lFgbSz .chat {
-    background: rgba(0,0,0,0.2) !important;
-}
-
