--- a/Mario Crew/SuperBowser.theme.css
+++ b/Mario Crew/SuperBowser.theme.css
@@ -1274,7 +1274,7 @@ color: white !important;
 .themeDefault-3M0dJU.valueChecked-3Bzkbm {
     background-color: #53B047 !important;
 }
-.horizontal-2BEEBe>.flex-lFgbSz:first-child, .horizontal-2BEEBe>.flexChild-1KGW5q:first-child {
+.horizontal-2BEEBe>.flex-lFgbSz:first-child {
     background: transparent !important
 }
 .theme-dark .modal-3HOjGZ {
