--- a/Mario Crew/SuperBowser.theme.css
+++ b/Mario Crew/SuperBowser.theme.css
@@ -5,6 +5,9 @@
     background: green;
     border: 2px solid black;
 }
+.theme-dark .message-group a {
+    color: #00FF00;
+}
 /* Scrollbars to Start Off Don't Touch and Other Stuff on that list */
 /*divider*/
 /* One that shows the Date Divider */
@@ -1975,7 +1978,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 }
 .theme-dark .message-group h2 strong {
     color: rgb(255, 255, 255);
-    font-size: 21px;
+    font-size: 15px;
     text-shadow: 1px 3px 2px #000, 1px 3px 2px #000;
 }
 .theme-dark .message-group h2 span {
