--- a/Mario Crew/SuperPeach.theme.css
+++ b/Mario Crew/SuperPeach.theme.css
@@ -772,9 +772,7 @@
     border-width: 3px;
     border-style: inset;
 }
-.horizontal-2BEEBe>.flexChild-1KGW5q:not(.sizeDefault-rZbSBU) {
-    background: transparent !important;
-}
+
 .horizontal-2BEEBe>.flex-lFgbSz:last-child:not(.sizeDefault-rZbSBU), .horizontal-2BEEBe>.flexChild-1KGW5q:last-child:not(.sizeDefault-rZbSBU) {
     background: transparent !important;
 }
@@ -1272,7 +1270,7 @@ color: white !important;
 .themeDefault-3M0dJU.valueChecked-3Bzkbm {
     background-color: #F599B2 !important;
 }
-.horizontal-2BEEBe>.flex-lFgbSz:first-child, .horizontal-2BEEBe>.flexChild-1KGW5q:first-child {
+.horizontal-2BEEBe>.flex-lFgbSz:first-child {
     background: transparent !important
 }
 .theme-dark .modal-3HOjGZ {
