--- a/Mario Crew/SuperLuigi.theme.css
+++ b/Mario Crew/SuperLuigi.theme.css
@@ -767,9 +767,7 @@
     border-width: 3px;
     border-style: inset;
 }
-.horizontal-2BEEBe>.flexChild-1KGW5q:not(.sizeDefault-rZbSBU) {
-    background: transparent !important;
-}
+
 .horizontal-2BEEBe>.flex-lFgbSz:last-child:not(.sizeDefault-rZbSBU), .horizontal-2BEEBe>.flexChild-1KGW5q:last-child:not(.sizeDefault-rZbSBU) {
     background: transparent !important;
 }
@@ -1267,7 +1265,7 @@ color: white !important;
 .themeDefault-3M0dJU.valueChecked-3Bzkbm {
     background-color: #5BA949 !important;
 }
-.horizontal-2BEEBe>.flex-lFgbSz:first-child, .horizontal-2BEEBe>.flexChild-1KGW5q:first-child {
+.horizontal-2BEEBe>.flex-lFgbSz:first-child {
     background: transparent !important
 }
 .theme-dark .modal-3HOjGZ {
