--- a/Mario Crew/SuperMario.theme.css
+++ b/Mario Crew/SuperMario.theme.css
@@ -770,9 +770,7 @@ a {
     border-width: 3px;
     border-style: inset;
 }
-.horizontal-2BEEBe>.flexChild-1KGW5q:not(.sizeDefault-rZbSBU) {
-    background: transparent !important;
-}
+
 .horizontal-2BEEBe>.flex-lFgbSz:last-child:not(.sizeDefault-rZbSBU), .horizontal-2BEEBe>.flexChild-1KGW5q:last-child:not(.sizeDefault-rZbSBU) {
     background: transparent !important;
 }
@@ -1280,7 +1278,7 @@ color: white !important;
 .themeDefault-3M0dJU.valueChecked-3Bzkbm {
     background-color: #D42128 !important;
 }
-.horizontal-2BEEBe>.flex-lFgbSz:first-child, .horizontal-2BEEBe>.flexChild-1KGW5q:first-child {
+.horizontal-2BEEBe>.flex-lFgbSz:first-child {
     background: transparent !important
 }
 .theme-dark .modal-3HOjGZ {
