--- a/Mario Crew/SuperMario.theme.css
+++ b/Mario Crew/SuperMario.theme.css
@@ -1,6 +1,10 @@
 .theme-dark .chat,.container-RYiLUQ,.guilds-wrapper .guilds,.typeMacOS-3IiWed,.titleBar-3_fDwJ,.theme-dark #friends,.private-channels {
     background-color: rgba(0,0,0,0.4) !important;
 }
+.aka-2Ba14Z {
+    background: red;
+    border: 2px solid blue;
+}
 /* Scrollbars to Start Off Don't Touch and Other Stuff on that list */
 /*divider*/
 /* One that shows the Date Divider */
