--- a/Mario Crew/SuperMario.theme.css
+++ b/Mario Crew/SuperMario.theme.css
@@ -1819,11 +1819,14 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     background: rgba(0,0,0,0.21) !important;
 }
 .chat .avatar-large {
-    width: 83px;
-    height: 83px;
+    width: 53px;
+    height: 53px;
     background-size: cover;
     background-color: #D42128;
     border: 4px solid #2E3192;
+}
+.theme-dark .message-group a {
+    color: red;
 }
 .theme-dark .chat form {
     background-color: transparent !important;
@@ -1980,12 +1983,12 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 }
 .theme-dark .message-group h2 strong {
     color: rgb(255, 255, 255);
-    font-size: 21px;
+    font-size: 15px;
     text-shadow: 1px 3px 2px #000, 1px 3px 2px #000;
 }
 .theme-dark .message-group h2 span {
     color: rgba(255, 255, 255, 1);
-    font-size: 17px;
+    font-size: 14px;
     text-shadow: 1px 3px 2px #000, 1px 3px 2px #000;
 }
 .theme-dark .channel-members h2 {
