--- a/Mario Crew/SuperLuigi.theme.css
+++ b/Mario Crew/SuperLuigi.theme.css
@@ -1801,9 +1801,12 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .scroller-fzNley.channel-members {
     background: rgba(0,0,0,0.21) !important;
 }
+.theme-dark .message-group a {
+    color: #559b4c;
+}
 .chat .avatar-large {
-    width: 83px;
-    height: 83px;
+    width: 53px;
+    height: 53px;
     background-size: cover;
     background-color: #284A12;
     border: 4px solid #019000;
@@ -1962,12 +1965,12 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 }
 .theme-dark .message-group h2 strong {
     color: rgb(255, 255, 255);
-    font-size: 21px;
+    font-size: 15px;
     text-shadow: 1px 3px 2px #000, 1px 3px 2px #000;
 }
 .theme-dark .message-group h2 span {
     color: rgba(255, 255, 255, 1);
-    font-size: 17px;
+    font-size: 14px;
     text-shadow: 1px 3px 2px #000, 1px 3px 2px #000;
 }
 .theme-dark .channel-members h2 {
