--- a/Yoshi.theme.css
+++ b/Yoshi.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Yoshi Theme","description":"The Great Yoshi Theme","author":"DevilsTheAvenged","version":"1.0"}*//{}
+//META{"name":"Yoshi_Theme","description":"The Great Yoshi Theme","author":"DevilsTheAvenged","version":"1.0"}*//{}
 @import url(https://rawgit.com/DevilsLynAvenged/Other-Workspace/master/SomeUnImportantStuff/ThemeFixerv2.theme.css);
 @import url(https://cdn.rawgit.com/DevilsLynAvenged/DevilsLynAvenged/3b021a78/Mario%20Crew/SuperYoshi.theme.css);
 .app,
