--- a/Mario Crew/SuperYoshi.theme.css
+++ b/Mario Crew/SuperYoshi.theme.css
@@ -151,11 +151,11 @@
 }
 /* Hypersquad Badge */
 #user-profile-modal .header .header-info .profile-badge.badge-hypesquad {
-    background: url(/assets/23fbc1d621de200e48b165d40a0ea531.svg)84% 84% /cover !important;
+    background-image: url(/assets/23fbc1d621de200e48b165d40a0ea531.svg) !important;
 }
 /* Partner Badge */
 #user-profile-modal .header .header-info .profile-badge.badge-partner {
-    background: url(/assets/c9423f39ad61457cb1125138d8ea1898.svg)84% 84% /cover !important;
+    background: url(/assets/c9423f39ad61457cb1125138d8ea1898.svg) !important;
 }
 #user-profile-modal .header .header-info .profile-badge {
     background-position: 0 0;
