--- a/Mario Crew/SuperMario.theme.css
+++ b/Mario Crew/SuperMario.theme.css
@@ -152,10 +152,12 @@
 /* Hypersquad Badge */
 #user-profile-modal .header .header-info .profile-badge.badge-hypesquad {
     background-image: url(/assets/23fbc1d621de200e48b165d40a0ea531.svg) !important;
+    background-size: cover !important;
 }
 /* Partner Badge */
 #user-profile-modal .header .header-info .profile-badge.badge-partner {
     background: url(/assets/c9423f39ad61457cb1125138d8ea1898.svg) !important;
+    background-size: cover !important;
 }
 #user-profile-modal .header .header-info .profile-badge {
     height: 52px;
