--- a/Mario Crew/SuperMario.theme.css
+++ b/Mario Crew/SuperMario.theme.css
@@ -153,17 +153,17 @@
 #user-profile-modal .header .header-info .profile-badge.badge-hypesquad {
     background-image: url(/assets/23fbc1d621de200e48b165d40a0ea531.svg) !important;
     background-size: cover !important;
+    margin-right: 0;
+    padding-right: 8px;
 }
 /* Partner Badge */
 #user-profile-modal .header .header-info .profile-badge.badge-partner {
     background: url(/assets/c9423f39ad61457cb1125138d8ea1898.svg) !important;
     background-size: cover !important;
+    margin-right: 0;
+    padding-right: 8px;
 }
-#user-profile-modal .header .header-info .profile-badge {
-    height: 52px;
-    width: 72px;
-    margin-bottom: 0px !important;
-}
+
 #user-profile-modal .header .header-info .header-info-inner .discord-tag .username {
     position: absolute;
     top: 9px;
