--- a/Mario Crew/SuperBowser.theme.css
+++ b/Mario Crew/SuperBowser.theme.css
@@ -149,32 +149,7 @@
     background-color: rgba(0,0,0,0) !important;
     box-shadow: none;
 }
-/* Nitro Badge */
-#user-profile-modal .header .header-info .profile-badge.badge-premium {
-    background: url(https://discordia.me/uploads/nitro/nitrobadge.png) 84% 84% /cover !important;
-    margin-right: 0;
-    padding-right: 8px;
-}
-/* Hypersquad Badge */
-#user-profile-modal .header .header-info .profile-badge.badge-hypesquad {
-    background-image: url(/assets/23fbc1d621de200e48b165d40a0ea531.svg) !important;
-}
-/* Partner Badge */
-#user-profile-modal .header .header-info .profile-badge.badge-partner {
-    background: url(/assets/c9423f39ad61457cb1125138d8ea1898.svg) !important;
-}
-#user-profile-modal .header .header-info .profile-badge {
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    height: 52px;
-    width: 72px;
-    position: absolute;
-    left: -3px !important;
-    top: 4px;
-    margin-bottom: 0px !important;
-    background-size: cover !important;
-}
+
 #user-profile-modal .header .header-info .header-info-inner .discord-tag .username {
     position: absolute;
     top: 9px;
@@ -2167,80 +2142,13 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     border-style: solid;
     background: rgba(7,6,5,0.7);
 }
-/* Invite Button Accepted and Main and such */
-.theme-dark .invite-button.accepted.can-click {
-    background-color: rgba(7,6,5,0.5);
-    background-size: 70px 70px;
-    border-color: black;
-    border-width: 3px;
+/* The Invite Section */
+.theme-dark .wrapper-uAa07y {
+    background-color: rgba(59,21,125,0.6);
+    border: none;
 }
+/* The Invite Accepted Section */
 .invite-button-icon.accepted {
-    background-color: #53B047;
-    border-color: black;
-    border-width: 3px;
-}
-.invite-button-icon.accepted:before {
-    background: url(https://t0.rbxcdn.com/7e2be988af912c82d2f02e2e2a3088fc) 10% 10% / cover !important;
-    width: 56px;
-    height: 56px;
-    transform:rotate(3deg);
-    margin-bottom: 0px !important;
-    content: "";
-    position: absolute;
-    left: -3px;
-    top: -3px;
-}
-.invite-button-icon.accepted:before {
+    background-color: rgb(59,21,125);
     border: none;
-}
-
-.invite-button-icon:before {
-    background: url(https://t0.rbxcdn.com/7e2be988af912c82d2f02e2e2a3088fc) 10% 10% / cover !important;
-    width: 56px;
-    height: 56px;
-    transform:rotate(3deg);
-    margin-bottom: 0px !important;
-    content: "";
-    position: absolute;
-    left: -3px;
-    top: -3px;
-    border: none;
-}
-.invite-button.join:hover .invite-button-icon {
-    border-color: #53B047;
-}
-.invite-button-icon {
-    background-color: #070605;
-    border: 3px solid  #C43F28;
-    border-radius: 50%;
-    height: 50px;
-    margin-right: 10px;
-    position: relative;
-    transition: border-color .2s;
-    width: 50px;
-}
-.theme-dark .invite-button {
-    background-color: #070605;
-    background-size: 70px 70px;
-    border-color: #53B047;
-    border-width: 3px;
-}
-/* The Invite Expired Stage */
-.invite-button-icon.expired:before {
-    border: none;
-    border-right: none;
-    border-width: 3px;
-}
-.invite-button-icon.expired:after {
-    content: "NO!";
-    transform: rotate(0deg);
-    border: none;
-    margin-top: 7px;
-    margin-left: -14px;
-    font-size: 20px;
-    font-weight: 800;
-}
-.invite-button-icon.expired {
-    background-color: red;
-    border-color: red;
 }
