--- a/EpicBubbleTheme.theme.css
+++ b/EpicBubbleTheme.theme.css
@@ -2107,6 +2107,7 @@ color: white !important;
 .popout-UKvsJt {
     height: 130px;
     width: 130px;
+   animation: float 3s ease-in-out infinite;
 }
 .body-3rkFrF .note-3Zfyi2 textarea {
     padding: 6px 10px;
@@ -2201,4 +2202,7 @@ color: white !important;
     background-color: transparent;
     border: none;
     border-radius: 0px;
+}
+.profile-3z9uol {
+    animation: float 3s ease-in-out infinite;
 }
